XX-9228 - Move localization into rpms avoiding permission issues and multitude of other issues

--- a/sipxecs-lang-de.spec.in
+++ b/sipxecs-lang-de.spec.in
@@ -41,7 +41,7 @@ rm -rf $RPM_BUILD_ROOT
 %files
 %defattr(644,root,root,755)
 %{_datadir}/www/doc/stdprompts_de/*
-%{_sysconfdir}/sipxpbx/*
+%{_datadir}/java/sipXecs/sipXcommons/*
 
 %post
 
