--- a/configure.ac
+++ b/configure.ac
@@ -1,9 +1,10 @@
 AC_PREREQ(2.57)
-AC_INIT(sipxecs-lang-de, 4.2.1, sipx-dev@list.sipfoundry.org)
+AC_INIT(sipxecs-lang-de, 0.0.4.5.2, sipx-dev@list.sipfoundry.org)
 AC_CONFIG_AUX_DIR(config)
-AC_CONFIG_SRCDIR([stdprompts_de/01.wav])
-m4_include([config/sipXlib2.m4])
+AC_CONFIG_SRCDIR([stdprompts/01.wav])
 AM_INIT_AUTOMAKE(foreign tar-ustar)
+m4_include([config/sipXlib2.m4])
+AC_SUBST(LANG_ID, de)
 AC_CONFIG_FILES([
   Makefile
   sipxecs-lang-de.spec
