--- a/sipxpbx/WEB-INF/admin/commserver/BundlePanel.properties
+++ b/sipxpbx/WEB-INF/admin/commserver/BundlePanel.properties
@@ -1,12 +1,12 @@
-title=Configure Role
+title=Konfiguriere Funktion
 all=all
-error.missingMongoArbiter=Database arbiter is required if you have an even number of distributed databases.
-error.extraMongoArbiter=Database arbiter is not required if you have an even number of distributed databases.
-error.requiredFeatureAtLocation.{0}.{1}.{2}={0} requires {1} be enabled on {2}.
-error.requiredFeature.{0}.{1}={0} requires {1} be enabled.
-error.singleLocationOnly.{0}={0} can only be installed in one location.
-error.primaryLocationOnly.{0}={0} can only be installed on primary location.
-error.ntpUnmanagedService=NTP service is an unmanaged service
-quick.help=<p>A service might require one or more services. This means that enabling the said service will automatically enable the required services. \
-Some required services must be enabled on the same host as the service and in some cases it is sufficient to have at least one in the cluster.</p>
-<p>NOTE: Mouse over a service in order to see a brief description of the service.</p>
+error.missingMongoArbiter=Master-Datenbank wird ben\u00F6tigt, wenn Sie eine gerade Anzahl an verteilten Datenbanken haben.
+error.extraMongoArbiter=Master-Datenbank wird nicht ben\u00F6tigt, wenn Sie eine gerade Anzahl an verteilten Datenbanken haben.
+error.requiredFeatureAtLocation.{0}.{1}.{2}={0} ben\u00F6tigt {1} eingeschaltet auf {2}.
+error.requiredFeature.{0}.{1}={0} ben\u00F6tigt {1} eineschaltet.
+error.singleLocationOnly.{0}={0} kann nur in einem Pfad installiert werden.
+error.primaryLocationOnly.{0}={0} kann nur im Hauptpfad installiert werden.
+error.ntpUnmanagedService=Der NTP Service ist ein nicht betreuter Service.
+quick.help=<p>Ein Service ben\u00F6tigt m\u00F6glichweise einen oder mehrere andere Services. Das bedeutet, dass das Aktivieren des besagten Services m\u00F6glicherweise automatisch den ben\u00F6tigten Service aktivieren wird. \
+Einige ben\u00F6tigte Services müssen auf dem selben Host wie der besagte Service selbst aktiviert werden und in anderen F\u00E4llen ist es ausreichen zumindest einen in dem Cluster zu haben.</p>
+<p>HINWEIS: Bewegen Sie die Maus über einen Service, um eine kurze Beschreibung des Services zu sehen.</p>
