--- a/sipxpbx/WEB-INF/admin/commserver/EditLocationPage.properties
+++ b/sipxpbx/WEB-INF/admin/commserver/EditLocationPage.properties
@@ -1,49 +1,49 @@
 title=Server
-tab.configureLocation=Configure
-tab.configureFeatures=Server Modules
+tab.configureLocation=Konfiguriere
+tab.configureFeatures=Server Module
 tab.listServices=Services
 tab.natLocation=NAT
 tab.monitorTarget=Monitor
-quick.help.new=<p>After adding a new server here, run <em>{sipx-home}/bin/sipxecs-setup</em> \
-  on your newly configured machine in order to register the server.\
-  <br>Select <em>Adding a server</em> option in the <em>System Type</em> dialog. \
-  In the <em>Configuration Master</em> dialog enter the name of the primary server \
-  and the password displayed on this page.</p> \
-  <p><b>NOTE</b>: \
-  You cannot change Hostname and IP Address for primary server from this page. \
-  You need to re-run {sipx-home}/bin/sipxecs-setup in order to do this.
+quick.help.new=<p>Nachdem Sie einen neuen Server hier hinzugef\u00FCgt haben, f\u00FChren Sie <em>{sipx-home}/bin/sipxecs-setup</em> \
+  auf Ihrer neu konfigurierten Maschine aus, um den Server zu registrieren.\
+  <br>W\u00E4hlen Sie <em>Füge Server hinzu</em> in dem <em>System Typ</em> Dialog. \
+  Im <em>Konfigurations Master</em> Dialog geben Sie den Namen des prim\u00E4ren Servers \
+  und das Passwort ein, welches hier auf der Seite angezeigt wird.</p> \
+  <p><b>HINWEIS</b>: \
+  Es ist nicht m\u00F6glich, den Hostnamen und die IP-Adresse des prim\u00E4ren Server hier auf dieser Seite zu \u00E4ndern. \
+  Sie m\u00FCssen {sipx-home}/bin/sipxecs-setup neu ausf\u00FChren um dies zu bewirken.
   </p>
-quick.help=<p>Warning: Restarting services causes service interruption. Do it only if a service requires restart \
-  or is not working properly. In such case you might want to take a snapshot \
-  and report an issue.</p>
-quick.help.configurebundles=One or more roles can be enabled on each server.<br/>\
-  All roles can run on one single server or the different roles can \
-  be distributed to several servers forming a cluster.<br/>\
-  A high availability configuration can be configured by enabling a redundant SIP router role.<br/>\
-  Roles can be moved to dedicated servers to improve performance.
-quick.help.configurelocation=<p>In the advanced section a node may be taken "offline" by disabling "Call traffic" checkbox. This way \
-  you make sure the node will not receive call traffic in the case that it has problems. After fixing the problems, call traffic \
-  may be enabled.</p>\
-  <p>Also it is possible to disable file XML-RPC replications by disabling "Replicate config" checkbox in case the node has problems \
-  with XML-RPC replications, until fixing them.</p> \
-  <p><b>NOTE</b>: \
+quick.help=<p>Warnung: Einen Service neu zu starten hat das Aussetzen des Service zur Folge. F\u00FChren Sie nur einen Neustart aus, wenn ein Service dies verlangt \
+  oder nicht mehr korrekt funktioniert. In solch einem Falle k\u00F6nnen Sie einen Screenshot machen \
+  und einen Fehler melden.</p>
+quick.help.configurebundles=Eine oder mehrere Funktionen k\u00F6nnen auf jedem Server aktiviert werden.<br/>\
+ Alle Funktionen k\u00F6nnen auf einem einzelnen Server laufen, oder verschiedene Funktionen k\u00F6nnen \
+  auf mehrere Server aufgeteilt werden, welche dann ein Cluster bilden.<br/>\
+  Eine Hochverf\u00FCgbarkeits-Konfiguration kann erreicht werden, indem eine redundante SIP Router Konfiguration eingestellt wird.<br/>\
+  Funktionen k\u00F6nnen auf einen dedizierten Server ausgelagert werden, um die Geschwindigkeit zu verbessern.
+quick.help.configurelocation=<p>Im fortgeschrittenen Bereich kann ein Knotenpunkt "offline" gesetzt werden, indem die "Call traffic" Checkbox deaktiviert wird. Dadurch \
+  stellen Sie sicher, dass der Knotenpunkt keine Anrufe empf\u00E4ngt, falls er Probleme hat. Nachdem das Problm behoben wurde, kann call traffic \
+  wieder aktiviert werden.</p>\
+  <p>Es ist auch m\u00F6glich den XML-RPC Datei Abgleich zu deaktivieren, indem die Checkbox "Reproduziere config" deaktiviert wird, falls der Knotenpunkt Probleme hat \
+  mit XML-RPC Abgleichen, bis diese repariert sind .</p> \
+  <p><b>Hinweis</b>: \
   <ul> \
-  <li>A node must be registered in order to be able to access advanced section.</li>\
-  <li>On the primary node it is not possible to disable replication configuration.</li>\
-  <li>Cannot enable call traffic without enabling config replication.</li>\
-  <li>Enabling config replication on a node will trigger a full replication on that node (as if <i>sending profiles</i> on that node).</li>\
+  <li>Ein Knotenpunkt muss registriert sein, damit der fortgeschrittene Bereich betreten werden kann.</li>\
+  <li>Auf dem Haupt-Knotenpunkt ist es nicht m\u00F6glich die Option Reproduziere Config zu deaktivieren.</li>\
+  <li>Es ist nicht m\u00F6glich Anruf-Verkehr zu aktivieren, ohne Reproduziere Config zu aktivieren.</li>\
+  <li>Reproduziere Config auf einem Knotenpunkt einzuschalten hat eine volle Reproduktion auf dem Knotenpunkt zur Folge (genauso wie <i>sende profile</i> auf diesem Knotenpunkt).</li>\
   </ul></p>
-msg.tooManyBundles=You cannot have more than {1} {0} {1,choice,1\#role|1<roles} enabled in the cluster.
-msg.tooFewBundles=At least {1} {0} {1,choice,1\#role has|1<roles have} to be enabled in the cluster.
-xml.rpc.error.operation=Error performing operations on services from host: {0}
-only.restart.available=Only "Restart" operation is available for Configuration service
-crumb.new.server=New Server
-error.duplicateFqdnOrIp=A server with Hostname {0} or IP Address {1} is already defined.
-quick.help.natlocation=The following configuration must be applied to the firewall at the network border: <p>\
-* Relay messages on the UDP port designated as the "SIP TCP/UDP Port" to the server's private IP address and port 5060<BR> \
-* Relay messages on the TCP port designated as the "SIP TCP/UDP Port" to the server's private IP address and port 5060<BR> \
-* Relay UDP ports allocated for media relay to the server's private IP address <p><br/>\
-<b>WARNING!</b><br/>In case of changing default values for Start / End RTP Port please make sure the specified range \
-does not overlap ephemeral port range (usually 32768 to 61000) as this could cause Media Relay to fail.<br/>\
-You can check or change ephemeral port range in /proc/sys/net/ipv4/ip_local_port_range file.
-error.replication.config=Cannot enable call traffic on a node without enabling configuration
+msg.tooManyBundles=Sie k\u00F6nnen nicht mehr als {1} {0} {1,choice,1\#Konfiguration|1<Konfigurationen} im Cluster einschalten.
+msg.tooFewBundles=Mindestens {1} {0} {1,choice,1\#Konfiguration muss|1<Konfigurationen m\u00FCssen} im Cluster aktiv sein.
+xml.rpc.error.operation=Fehler, w\u00E4hrend Operationen an Services ausgef\u00FChrt wurden, von Host: {0}
+only.restart.available=Nur die "Restart" Option ist verf\u00FCgbar um die Services zu konfigurieren
+crumb.new.server=Neuer Server
+error.duplicateFqdnOrIp=Ein Server mit Hostname {0} oder IP-Adresse {1} ist bereits eingetragen.
+quick.help.natlocation=Die folgende Konfiguration muss auf der Firewall eingespielt werden: <p>\
+* Leite Mitteilungen an den UDP Port, bezeichnet als "SIP TCP/UDP Port" an die private IP-Adresse des Servers und Port 5060 weiter<BR> \
+* Leite Mitteilungen an den TCP Port, bezeichnet als "SIP TCP/UDP Port" an die private IP-Adresse des Servers und Port 5060 weiter<BR> \
+* Leite UDP Ports, welche für Media \u00FCbertragungen reserviert sind an die private IP-Adresse des Servers weiter<p><br/>\
+<b>Warnung!</b><br/>Falls Sie die voreingestellten Werte für Start / Ende RTP Port \u00E4ndern, vergewissern Sie sich dass die eingestellten Werte \
+sich nicht mit den vorl\u00E4ufigen Port Bereichen \u00FCberschneiden (normal 32768 bis 61000) da dies Media \u00FCbertragungen st\u00F6ren k\u00F6nnte.<br/>\
+Sie k\u00F6nnen die vorl\u00E4ufigen Port Bereiche unter /proc/sys/net/ipv4/ip_local_port_range einsehen oder \u00E4ndern.
+error.replication.config=Es ist nicht m\u00F6glich Anruf-Verkehr auf einem Knotenpunkt einzuschalten, ohne eine Konfiguration.
