--- a/sipxpbx/WEB-INF/admin/commserver/LocationStatePage.properties
+++ b/sipxpbx/WEB-INF/admin/commserver/LocationStatePage.properties
@@ -1,7 +1,7 @@
-label.failed=Latest Failed replications
-label.succeded=Latest Successful replications
-label.progress=Replication in progress...
-label.configurationError=Configuration error
-label.configured=Configured
-label.notFinished=Previous attempt not finished
-link.back=Go back
+label.failed=Letzte fehlgeschlagene Replikation
+label.succeded=Letzte erfolgreiche Replikation
+label.progress=Replikation im Gange...
+label.configurationError=Konfigurationsfehler
+label.configured=Konfiguriert
+label.notFinished=Vorhergegangene Versuch noch nicht abgeschlossen
+link.back=Zur\u00FCck
