--- a/sipxpbx/WEB-INF/admin/time/EditTimeZoneSettings.properties
+++ b/sipxpbx/WEB-INF/admin/time/EditTimeZoneSettings.properties
@@ -1,4 +1,4 @@
-timeSettings.newTimezone=Time Zone
-button.apply=Apply
-timeZone.quickHelp=Change the system time zone. This does not affect device time zone
-title=Time Zone Settings
+timeSettings.newTimezone=Zeitzone
+button.apply=\u00FCbernehmen
+timeZone.quickHelp=\u00E4ndere die System Zeitzone. Dies betrifft nicht die Ger\u00E4te Zeitzone.
+title=Zeitzonen Einstellungen
