--- a/sipxpbx/WEB-INF/admin/AlarmGroupsPanel.properties
+++ b/sipxpbx/WEB-INF/admin/AlarmGroupsPanel.properties
@@ -1,7 +1,7 @@
 name=Name
-enabled=Enabled
-description=Description
-add=Add Alarm Group
-button.delete=Delete
-confirm.delete=Are you sure you want to remove selected notification group?
-msg.err.defalutAlarmGroupDeletion=The default alarm group can't be deleted !
+enabled=Eingeschaltet
+description=Beschreibung
+add=F\u00FCge Alarm Gruppe hinzu
+button.delete=L\u00F6sche
+confirm.delete=Sind Sie sicher, dass Sie die markierte Benachrichtigungs-Gruppe l\u00F6schen wollen?
+msg.err.defalutAlarmGroupDeletion=Die Standard Alarm Gruppe kann nicht gel\u00F6scht werden!
