--- a/sipxpbx/WEB-INF/admin/AlarmTrapReceiverPanel.properties
+++ b/sipxpbx/WEB-INF/admin/AlarmTrapReceiverPanel.properties
@@ -1,4 +1,4 @@
-label.snmpNotificationContacts=SNMP Notification
-label.hostAddress=Host Address
+label.snmpNotificationContacts=SNMP Benachrichtigung
+label.hostAddress=Host Adresse
 label.port=Port
-link.addTrap=Add Trap Receiver address
+link.addTrap=F\u00FCge Trap Receiver Adresse hinzu
