--- a/sipxpbx/WEB-INF/admin/AlarmTypes.properties
+++ b/sipxpbx/WEB-INF/admin/AlarmTypes.properties
@@ -1,7 +1,7 @@
 label=Alarm
-description=Description
-severity=Severity
+description=Beschreibung
+severity=Schwere
 emailEnabled=E-mail
-title=Alarm Types
-groupName=Alarm Group
-threshold=Minimum Threshold
+title=Alarm Typen
+groupName=Alarm Gruppe
+threshold=Minimale Grenze
