--- a/sipxpbx/WEB-INF/admin/ldap/LdapSettings.properties
+++ b/sipxpbx/WEB-INF/admin/ldap/LdapSettings.properties
@@ -1,12 +1,12 @@
-label.enableOpenfireConfiguration=Instant Messaging Authentication
-description.enableOpenfireConfiguration=By enabling this feature, the Openfire instant messaging server will \
- validate each user's passwords with the LDAP server configured for this system. The instant messaging server will also \
- update user details displayed to IM clients from the LDAP server directly. IM clients will see the latest contact information \
- without having to wait for the next LDAP import.
-label.authenticationOptions=Authentication Options
-description.authenticationOptions=Depending the selected option, the user portal will validate the user PIN or LDAP username and password \
- with the LDAP server configured for this system. \
- This feature does not affect voicemail access from a phone, that remains the user's PIN.
-authentication.noLDAP=No LDAP
-authentication.LDAP=LDAP Only
-authentication.pinLDAP=LDAP and PIN
+label.enableOpenfireConfiguration=Instant Messaging Authentifizierung
+description.enableOpenfireConfiguration=Wenn Sie diese Funktion aktivieren, wird der Openfire instant messaging Server \
+ von jedem Benutzer das Passwort mit dem LDAP Server, welcher f\u00FCr dieses System eingestellt ist, abgleichen. Ebenso wird der IM Server \
+ Benutzer Details, welche den IM Clients angezeigt werden, direkt aktualisieren. IM Clients werden die aktuellsten Kontakt Informationen sehen, \
+ ohne auf den n\u00E4chsten LDAP Import warten zu m\u00FCssen.
+label.authenticationOptions=Authentifizierungs Optionen
+description.authenticationOptions=\u00E4bhängig von der ausgew\u00E4hlten Option, wird das Benutzer Portal den Benutzer PIN oder LDAP Benutzername und Passwort \
+ mit dem LDAP Server, welcher f\u00FCr dieses System eingestellt ist, validieren. \
+ Diese Funktion betrifft nicht den Zugang zur Mailbox vom Telefon aus, hier bleibt der Benutzer PIN.
+authentication.noLDAP=Kein LDAP
+authentication.LDAP=Nur LDAP
+authentication.pinLDAP=LDAP und PIN
