--- a/sipxpbx/WEB-INF/admin/commserver/LocationsPanel.properties
+++ b/sipxpbx/WEB-INF/admin/commserver/LocationsPanel.properties
@@ -1,41 +1,41 @@
 title=Servers
 id=ID
 name=Name
-address=IP Address
+address=IP Adresse
 status=Status
-lastAttempt=Last Attempt
+lastAttempt=Letzter Versuch
 fqdn=Hostname
-CONFIGURATION_ERROR=<span style="color:red">Configuration error</span>
-UNCONFIGURED=<span style="color:blue">Unconfigured</span>
-CONFIGURED=<span style="color:green">Configured</span>
-PROGRESS=In Progress...
-UNINITIALIZED=<span style="color:blue">Uninitialized</span>
-ATTEMPT_NOT_FINISHED=<span style="color:red">Previous attempt not finished</span>
-DISABLED=Disabled
-replication.showDetails=Show Details
-replication.hideDetails=Hide Details
-link.seeState=See State
-link.addLocation=Add Server
+CONFIGURATION_ERROR=<span style="color:red">Konfigurationsfehler</span>
+UNCONFIGURED=<span style="color:blue">nicht konfiguriert</span>
+CONFIGURED=<span style="color:green">konfiguriert</span>
+PROGRESS=In Bearbeitung...
+UNINITIALIZED=<span style="color:blue">Nicht initialisiert</span>
+ATTEMPT_NOT_FINISHED=<span style="color:red">Vorhergehender Versuch noch nicht abgeschlossen</span>
+DISABLED=Deaktiviert
+replication.showDetails=Zeige Details
+replication.hideDetails=Verstecke Details
+link.seeState=Status ansehen
+link.addLocation=Server hinzuf\u00FCgen
 label.jobStatus=Job Status
-button.delete=Delete
-confirm.delete=Are you sure you want to delete the selected Server(s)?
-button.sendProfiles=Send Profiles
-xml.rpc.error.state=Cannot retrieve services status from host: {0}
-error.delete.primary=Primary server: {0} cannot be deleted
-confirm.sendProfiles=All services on the selected location will be restarted. Are you sure?
+button.delete=L\u00F6schen
+confirm.delete=Sind Sie sicher, dass Sie den(die) ausgew\u00E4hlten Server l\u00F6schen wollen?
+button.sendProfiles=Sende Profile
+xml.rpc.error.state=Nicht m\u00F6glich den Service Status zu empfangen von Host: {0}
+error.delete.primary=Prim\u00E4rer Server: {0} kann nicht gel\u00F6scht werden
+confirm.sendProfiles=Alle Services in dem ausgew\u00E4hlten Ort werden neu gestartet. Sind Sie sicher?
 tab.locations=Servers
-tab.roles=Roles
-tab.settings=Settings
-tab.features=Cluster Modules
+tab.roles=Funktionen
+tab.settings=Einstellungen
+tab.features=Cluster Module
 
-quick.help=Select one server in order to configure it and check out running services. \
-Here you can add a new server in the cluster (for HA configuration) \
-Each of the services can be configured from its respective entry in System menu. \
-<p>Clicking the <em>Send Profiles</em> button will cause configuration files for \
-all services to be sent (replicated) to the selected servers, and all affected services to be restarted automatically. \
-This is rarely needed as configuration files are sent by default when their \
-associated configuration has been changed.  However, in the case where a distributed server \
-was not available at the time of a configuration change, this button can be used to re-send \
-the configuration.</p>\
-<p>Note that <em>sending profiles</em> to the master server will cause the in-memory database (MongoDB) to recreate \
-and replicate to all slaves.</p> \
+quick.help=W\u00E4hlen Sie einen Server aus, um ihn zu konfigurieren und beobachten Sie die laufenden Services. \
+Hier k\u00F6nnen Sie einen neuen Server in den Cluster einf\u00FCgen (f\u00FCr HA Konfiguration) \
+Jeder Service kann von dem zugeh\u00F6rigen Eintrag im Systemmen\u00FC aus konfiguriert werden. \
+<p>Wenn Sie den <em>Sende Profile</em> Button anklicken, werden die Konfigurationsdateien f\u00FCr \
+alle Service an den ausgew\u00E4hlten Server geschickt (reproduziert) und alle betroffenen Services werden automatisch neu gestartet. \
+Dies wird selten ben\u00F6tigt, da die Konfigurationsdateien von Haus aus gesendet werden, wenn \
+deren zugeh\u00F6rige Konfiguration ge\u00E4ndert wird. Wie auch immer, im Falle, dass ein dezentraler Server \
+nicht verf\u00FCgbar war zu der Zeit, als sich die Konfiguration \u00E4nderte, kann dieser Button benutzt werden um die Konfiguration \
+neu zu senden.</p>\
+<p>Nehmen Sie zur Kenntnis, dass <em>Sende Profile</em> an den Master zur Folge hat, dass die in-Memory Datenbank (MongoDB) neu erstellt wird \
+und an alle Slaves verteilt wird.</p> \
