--- a/sipxpbx/WEB-INF/admin/AlarmsPage.properties
+++ b/sipxpbx/WEB-INF/admin/AlarmsPage.properties
@@ -1,23 +1,23 @@
-title=Alarms
-tab.configureAlarms=Configuration
-tab.notificationGroups=Alarm Groups
+title=Alarme
+tab.configureAlarms=Konfiguration
+tab.notificationGroups=Alarm Gruppen
 tab.historyAlarms=History
-tab.trapReceivers=Trap Receivers
-label.enableAlarmServerEmailNotification=Send alarm notifications
-label.fromEmailAddress=From e-mail address
-label.alarms=Alarm types
+tab.trapReceivers=Trap Empf\u00E4nger
+label.enableAlarmServerEmailNotification=Sende Alarm Benachrichtigung
+label.fromEmailAddress=Von E-mail Adresse
+label.alarms=Alarmtypen
 
-label.hostAddress=Host Address
+label.hostAddress=Host Adresse
 label.port=Port
 
 link.download=Download Alarm MIB
-error.requiredEmail=You must enter at least one e-mail address
-error.maxNumberEmail=You cannot add more than 5 e-mail addresses
-error.https.server.status.code=Http Server on {0} returned error: {1}
-error.https.server=Cannot initiate connection to {0}.\n{1}
-error.io.exception=Cannot retrieve alarm history\n{0}
-error.xml.rpc=XML-RPC Error: {0}.\nCannot retrieve log from host {1}
-quick.help=The alarm server collects system alarms and sends out notification to contacts added to alarm groups.<br/>\
-		You can select a different alarm group for each alarm type.
-quick.help.emailNotificationContacts=Alarm notification e-mails, SMSs, SNMP Traps will be sent to each contact in the alarm group.
-quick.help.trapReceivers=<p>Define a group of SNMP trap servers (or "Trap Sinks") to notify alarms.</p>
+error.requiredEmail=Sie m\u00FCssen mindestens eine E-Mail Adresse eingeben
+error.maxNumberEmail=Sie k\u00F6nnen nicht mehr als 5 E-Mail Adressen hinzuf\u00FCgen
+error.https.server.status.code=Http Server auf {0} gibt folgenden Fehler zur\u00FCck: {1}
+error.https.server=Keine Verbindung m\u00F6glich zu {0}.\n{1}
+error.io.exception=Nicht m\u00F6glich Alarm history zu empfangen\n{0}
+error.xml.rpc=XML-RPC Error: {0}.\nNicht m\u00F6glich Log zu empfangen von host {1}
+quick.help=Der Alarm Server sammelt System Alarme und sendet Benachrichtigungen an Kontakte, welche sich in der Alarm Gruppe befinden.<br/>\
+		Sie k\u00F6nnen für jeden Alarmtyp verschiedene Alarmgruppen definieren.
+quick.help.emailNotificationContacts=Alarm Benachritigungs E-mails, SMSs, SNMP Traps werden an jeden Kontakt in der Alarm Gruppe gesendet.
+quick.help.trapReceivers=<p>Definieren Sie eine Gruppe von SNMP trap Servers (oder "Trap Sinks") welche bei Alarm benachrichtigt werden.</p>
