--- a/sipxpbx/WEB-INF/admin/AuthCodes.properties
+++ b/sipxpbx/WEB-INF/admin/AuthCodes.properties
@@ -1,12 +1,12 @@
-title=Authorization Code
-add=Add Authorization Code
-starPrefix.label=Extension
-starPrefix.description=The digits to access authorized calls.
+title=Authentifizierungscode
+add=F\u00FCge Authentifizierungscode hinzu
+starPrefix.label=Erweiterung
+starPrefix.description=Die Zahlen um Zugang zu authorisierten Anrufen zu bekommen.
 code=Code
-description=Description
-confirm.delete=Are you sure you want to delete the selected authorization code(s)?
-quick.help=Authorization codes provide the ability to a user to initiate \
-           a call that requires permissions to which it is normally not allowed.  \
-           Using Aliases extends this capability to an external user dialing into \
-           the system similar to the telephony Direct Inward System Access feature (DISA).
-error.aliasinuse=Alias {0} is in use by a user or system.
+description=Beschreibung
+confirm.delete=Sind Sie sicher, dass Sie den(die) ausgew\u00E4hlten Authorisierungscode(s) l\u00F6schen wollen?
+quick.help=Authorisierungscodes geben einem User die M\u00F6glichkeit einen Anruf zu initiieren, \
+           welcher normalerweise Rechte ben\u00F6tigt, die der Benutzer nicht hat.  \
+           Aliases zu benutzen, erweitert diese Funktion, so dass sich ein externer Benutzer \
+           ins System einw\u00E4hlen kann, genauso wie es die Direct Inward System Access Funktion bietet (DISA).
+error.aliasinuse=Alias {0} wird von einem anderen Benutzer oder dem System verwendet.
