--- a/sipxpbx/WEB-INF/admin/CertificateAuthorities.properties
+++ b/sipxpbx/WEB-INF/admin/CertificateAuthorities.properties
@@ -1,22 +1,22 @@
-title=Certificate Authorities
-label.certificateFile=Upload Certificate Authority
-button.import=Upload
-fileName=Certificate
-certDescription=Description
-description.certificate=Upload certificate authority file. Useful when services need to create secure \
- connections with other systems that have certificates signed with an authority not listed below.
-button.keep=Keep
-button.delete=Delete
-error.certificate=Please select certificate to upload
-error.valid=Certificate {0} is not valid
-label.delete=Delete
-confirm.delete=Are you sure you want to delete the selected certificate(s)?
-description.rebuild=This will regenerate a new certificate authority and all certificates signed by that authority.
-label.rebuild=Rebuild Self-Signed Certificate Authority
-button.rebuild=Rebuild
-msg.rebuild.success=New certificate authority and related certificated were successfully regenerated. Affected components will reload momentarily.
-label.selfSigningAuthority=Self-Signing Certificate Authority
-description.selfSigningAuthority=A self-signed certificate authority is used to as a convenience to secure the system with requiring outside security \ 
- providers like Verisign or CACert.org. If you'd like to use these providers for some or all of the certificates used in this system, navigate to \
- import the appropriate authority below and then upload respective certificates to respective pages.
+title=Zertifikat Authorit\u00E4ten
+label.certificateFile=Lade Zertifikat Authorit\u00E4t hoch
+button.import=Hochladen
+fileName=Zertifikat
+certDescription=Beschreibung
+description.certificate=Lade Zertifikat Authorit\u00E4t Datei hoch. N\u00FCtzlich, wenn Services eine sichere Verbindung ben\u00F6tigen \
+ mit anderen Systemen, welche ein Zertifikat haben, das von einer Authorit\u00E4t unterzeichnet wurde, welche nicht unten aufgelistet ist.
+button.keep=Behalte
+button.delete=L\u00F6sche
+error.certificate=Bitten w\u00E4hlen Sie das hochzuladende Zertifikat aus
+error.valid=Zertifikat {0} ist nicht g\u00FCltig
+label.delete=L\u00F6schen
+confirm.delete=Sind Sie sicher, dass Sie das(die) ausgew\u00E4hlte(n) Zertifikat(e) l\u00F6schen wollen?
+description.rebuild=Dies wird eine Zertifikat Authorit\u00E4t neu generieren und alle Zertifikate neu generieren, die von dieser Authorit\u00E4t unterzeichnet wurden.
+label.rebuild=Regeneriere Self-Signed Zertifikat Authorit\u00E4t
+button.rebuild=Regeneriere
+msg.rebuild.success=Eine neue Zertifikat Authorit\u00E4t wurde generiert und alle in Verbindung stehenden Zertifikate wurden erfolgreich regeneriert. Betroffene Komponenten werden sich sofort selbst neu laden.
+label.selfSigningAuthority=Self-Signing Zertifikat Authorit\u00E4t
+description.selfSigningAuthority=Eine self-signed Zertifikat Authorit\u00E4t wird als Vorteil benutzt um das System mit n\u00F6tigen Sicherheitsprovidern außerhalb, \ 
+ wie VersiSign oder CACert.org zu sichern. Falls Sie diese Provider f\u00FCr eines oder alle Zertifikate in diesem System nutzen wollen, navigieren Sie \
+ zum Import der passenden Authorit\u00E4ten untenstehend und laden dann die passenden Zertifikate in die passenden Seiten.
    
