--- a/sipxpbx/WEB-INF/admin/EditAdmin.properties
+++ b/sipxpbx/WEB-INF/admin/EditAdmin.properties
@@ -1,2 +1,2 @@
-quick.help=When an advanced Administration Configuration setting is changed, \
- and apply button is pressed, please restart config service
+quick.help=Wenn eine fortgeschrittene Administrationseinstellung geändert wurde, \
+ und der Übernehmen Button geklickt wurde, starten Sie bitte den config Service neu.
