--- a/sipxpbx/WEB-INF/admin/EditAlarmGroupPage.properties
+++ b/sipxpbx/WEB-INF/admin/EditAlarmGroupPage.properties
@@ -1,12 +1,12 @@
-title=Alarm Group
-label.enableGroup=Enable
-label.smsNotificationContacts=SMS Notification
-label.emailNotificationContacts=E-mail Notification
-link.addSms=Add SMS address
-link.addEmail=Add e-mail address
-link.addEmailUser=Add user to be notified by e-mail
-error.duplicateGroupNames=Alarm group {0} is already defined.
-quick.help=<p>Define a group of users and additional email addresses to notify alarms. Note that SMS requires an email-to-SMS gateway.</p>
-prompt.selectRings=Search for the user to be added to alarm group.
-title.selectRings=Add Users to Alarm Group
-msg.defalutAlarmGroupRename=The default alarm group cannot be renamed
+title=Alarm Gruppe
+label.enableGroup=Einschalten
+label.smsNotificationContacts=SMS Benachrichtigung
+label.emailNotificationContacts=E-mail Benachrichtigung
+link.addSms=F\u00FCge SMS Adresse hinzu
+link.addEmail=F\u00FCge E-mail Adresse hinzu
+link.addEmailUser=F\u00FCge User hinzu, für E-Mail Benachrichtigung
+error.duplicateGroupNames=Alarm Gruppe {0} existiert bereits.
+quick.help=<p>Definieren Sie eine Gruppe von Benutzern und zus\u00E4tzlich E-Mail Adressen für Alarm Benachrichtigungen. Nehmen Sie zur Kenntnis, dass SMS ein E-mail-to-SMS Gateway ben\u00F6tigen.</p>
+prompt.selectRings=Suchen Sie nach dem Benutzer, der zur Alarmgruppe hinzugef\u00FCgt werden soll.
+title.selectRings=F\u00FCge Benutzer zur Alarmgruppe hinzu
+msg.defalutAlarmGroupRename=Die Standart Alarmgruppe kann nicht umbenannt werden.
