--- a/sipxpbx/WEB-INF/admin/EditAlarmGroupPage.properties
+++ b/sipxpbx/WEB-INF/admin/EditAlarmGroupPage.properties
@@ -7,6 +7,6 @@ link.addEmail=F\u00FCge E-mail Adresse hinzu
 link.addEmailUser=F\u00FCge User hinzu, für E-Mail Benachrichtigung
 error.duplicateGroupNames=Alarm Gruppe {0} existiert bereits.
 quick.help=<p>Definieren Sie eine Gruppe von Benutzern und zus\u00E4tzlich E-Mail Adressen für Alarm Benachrichtigungen. Nehmen Sie zur Kenntnis, dass SMS ein E-mail-to-SMS Gateway ben\u00F6tigen.</p>
-prompt.selectRings=Suchen Sie nach dem Benutzer, der zur Alarmgruppe hinzugef\u00FCgt werden soll.
-title.selectRings=F\u00FCge Benutzer zur Alarmgruppe hinzu
-msg.defalutAlarmGroupRename=Die Standart Alarmgruppe kann nicht umbenannt werden.
+prompt.selectRings=Suchen Sie nach dem Benutzer, der zur Alarm Gruppe hinzugef\u00FCgt werden soll.
+title.selectRings=F\u00FCge Benutzer zur Alarm Gruppe hinzu
+msg.defalutAlarmGroupRename=Die Standart Alarm Gruppe kann nicht umbenannt werden.
