--- a/sipxpbx/WEB-INF/admin/EditAuthCode.properties
+++ b/sipxpbx/WEB-INF/admin/EditAuthCode.properties
@@ -1,15 +1,15 @@
-title=Authorization Code
-permissions=Call Permissions
+title=Authentifizierungs Code
+permissions=Anruf Rechte
 code.label=Code
-code.description=The Code is a numeric pin to access privileged call permissions.  \
-     The code must be unique and between 3 to 15 digits long
-description.label=Description
-description.description=The Description is an optional text to \
-      describe what permissions are granted by the code.
-duplicate.code.error=The authorization code {0} already exists.
-blank.code.error=You must enter a value for the authorization code.
-blank.permission.error=You must select at least one call permission.
-quick.help=To set up an authorization code to restrict privileged dialing sequence, \
-    select the permissions to be granted by the code.\
-    For finer granularity of control, create one authorization code for each privileged \
-    dialing sequence and name each code by the call permission.
+code.description=Der Code ist eine numerische Pin um auf privilegierte Anruf Rechte zuzugreifen.  \
+     Der Code muss einzigartig sein und zwischen 3 und 15 Zahlen lang.
+description.label=Beschreibung
+description.description=Die Beschreibung ist ein optionaler Text um \
+      zu veranschaulichen, welche Rechte durch den Code gew\u00E4hrt werden.
+duplicate.code.error=Der Authorisierungscode {0} existiert bereits.
+blank.code.error=Sie müssen einen Wert für den Authorisierungscode eingeben.
+blank.permission.error=Sie m\u00FCssen mindestens eine Anrufgenehmigung eingeben.
+quick.help=Um einen Authorisierungscode einzurichten, welcher den privilegierten Wahlvorgang beschr\u00E4nkt, \
+    w\u00E4hlen Sie die Rechte aus, die der Code gew\u00E4hren soll.\
+    Für einen h\u00F6heren Grad der Kontrolle, erstellen Sie einen Authorisierungscode für jeden einzelnen privilegierten \
+    Wahlvorgang und benennen jeden Code nach seinen Anruf Rechten.
