--- a/sipxpbx/WEB-INF/admin/EditTlsPeer.properties
+++ b/sipxpbx/WEB-INF/admin/EditTlsPeer.properties
@@ -1,11 +1,11 @@
 title=TLS Peer
-permissions=Call Permissions
+permissions=Anruf Rechte
 name.label=TLS Peer Name
-name.description=The TLS Peer Name is usually the SIP Domain name or the FQDN of the remote system.  \
-    It is extracted from the Subject Alternative Names field in the remote system's certificate.  \
-    The list of identities contained in the remote certificate is logged in \
-    sipxbridge.log if no matching TLS Peer is found.
-duplicate.peerName.error=A TLS peer with name {0} already exists
-quick.help=To allow calls from an authenticated peer to use resources that require permissions, \
-    set the TLS Peer Name to be the identity contained in the remote system's certificate (usually the SIP Domain or FQDN), \
-    and select the permissions to be applied when users call from that system.
+name.description=Der TLS Peer Name ist normalerweise der SIP Domain Name oder der FQDN des remote Systems.  \
+    Er wird extrahiert aus dem Feld Subjekt Alternativ Name des Zertifikats des remote Systems.  \
+    Die Liste der Identit\u00E4ten, welche in dem remote Zertifikat enthalten sind, wird in \
+    sipxbridge.log gespeichert, falls kein passender TLS Peer gefunden wird.
+duplicate.peerName.error=A TLS peer mit dem Namen {0} existiert bereits
+quick.help=Um Anrufe eines authentifizierten Peer zu erlauben, welche auf Resourcen zugreifen, die eine Erlaubnis ben\u00F6tigen, \
+    stellen Sie den TLS Peer Name ein, wie er in dem Zertifikat des remote Systems vorkommt (normalerweise die SIP Domain oder FQDN), \
+    und w\u00E4hlen Sie die Rechte aus, die zugewiesen werden sollen, wenn der Benutzer von diesem System aus anruft.
