--- a/sipxpbx/WEB-INF/admin/HistoryAlarmsPanel.properties
+++ b/sipxpbx/WEB-INF/admin/HistoryAlarmsPanel.properties
@@ -1,14 +1,14 @@
 label.hosts=Server
-label.startDate=Start date/time
-label.endDate=End date/time
-button.filter=Show alarms
+label.startDate=Start Datum/Zeit
+label.endDate=Ende Datum/Zeit
+button.filter=Zeige Alarme
 alarm.code=Code
-description=Message
-alarm.severity=Severity
-date=Date
-message.invalidDates=The End date cannot be earlier than the Start date.
-error.logNotFound=No log available.
-error.cannotReadLog=Could not read the log.
-quick.help=You can filter the logs, \
-	by selecting a server and specifying the date/time range. <br/>
-error.io.exception=Cannot retrieve alarm history\n{0}
+description=Nachricht
+alarm.severity=Schwierigkeit
+date=Datum
+message.invalidDates=Das End Datum kann nicht früher sein, als das Start Datum.
+error.logNotFound=Keine Log verfügbar.
+error.cannotReadLog=Konnte die Logs nicht auslesen.
+quick.help=Sie können die Logs filtern, \
+	indem Sie einen Server auswählen und einen Datum/Zeit Bereich definieren. <br/>
+error.io.exception=Konnte Alarm History nicht empfangen\n{0}
