--- a/sipxpbx/WEB-INF/admin/HistoryAlarmsPanel.properties
+++ b/sipxpbx/WEB-INF/admin/HistoryAlarmsPanel.properties
@@ -6,9 +6,9 @@ alarm.code=Code
 description=Nachricht
 alarm.severity=Schwierigkeit
 date=Datum
-message.invalidDates=Das End Datum kann nicht früher sein, als das Start Datum.
+message.invalidDates=Das End Datum kann nicht fr\u00FCher sein, als das Start Datum.
 error.logNotFound=Keine Log verfügbar.
 error.cannotReadLog=Konnte die Logs nicht auslesen.
-quick.help=Sie können die Logs filtern, \
-	indem Sie einen Server auswählen und einen Datum/Zeit Bereich definieren. <br/>
+quick.help=Sie k\u00F6nnen die Logs filtern, \
+	indem Sie einen Server ausw\u00E4hlen und einen Datum/Zeit Bereich definieren. <br/>
 error.io.exception=Konnte Alarm History nicht empfangen\n{0}
