--- a/sipxpbx/WEB-INF/admin/ManageCertificates.properties
+++ b/sipxpbx/WEB-INF/admin/ManageCertificates.properties
@@ -1,34 +1,34 @@
-tab.generate=Generate CSR
-tab.importWeb=Import Web Certificate
-tab.importSip=Import SIP Certificate
-tab.authorities=Certificate Authorities
-quick.help.generate=Upon installation of your system a default <em>self-signed</em> certificate was installed \
-	to secure Web access. This certificate causes browsers to show a security warning message. If you would like \
-	to remove this warning you have to install a trusted certificate available from Certificate Authority \
-	such as VeriSign, Entrust, Comodo, GlobalSign etc.<br/>\
-	This page allows you to create the necessary Certificate Signing Request (CSR) needed by Certificate Authority \
-	and then install the new certificate.<br/>\
-	Generate a new Certificate Signing Request (CSR) by filling the \
-    fields with the appropriate values and pressing the Generate button. \
-    The content of the CSR file will be visible in the text area.
-button.generate=Generate
+tab.generate=Generiere CSR
+tab.importWeb=Importiere Web Zertifikat
+tab.importSip=Importiere SIP Zertifikat
+tab.authorities=Zertifikat Authorit\u00E4ten
+quick.help.generate=Bei der Installation Ihres Systems wurde ein Standart <em>self-signed</em> Zertifikat eingerichtet \
+	f\u00FCr den sicheren WEB Zugang. Dieses Zertifikat verursacht bei Browsern dass eine Sicherheitswarnung angezeigt wird. Wenn Sie \
+	diese Warnung entfernen wollen, dann m\u00FCssen Sie ein vertrauensw\u00FCrdiges Zertifikat eines Zertifikat Anbieters installieren, \
+	wie VeriSign, Entrust, Comodo, GlobalSign etc.<br/>\
+	Diese Seite erluabt Ihnen, das notwendige Certificate Signing Request (CSR) zu erstellen, welches von Zertifikats Anbietern ben\u00F6tigt wird \
+	und das neue Zertifikat dann zu installieren.<br/>\
+	Generieren Sie ein neues Certificate Signing Request (CSR) indem Sie \
+    die Felder mit den passenden Werten bef\u00FCllen und Generiere Button dr\u00FCcken. \
+    Der Inhalt der CSR Datei wird in dem Textfeld angezeigt.
+button.generate=Generiere
 label.csr=Certificate Signing Request (CSR)
-msg.generateSuccess=Generation of CSR completed successfully
-msg.readError=Cannot read from the {0} file
-msg.writeError=Cannot write to the {0} file
-msg.scriptGenError=Error while generating the CSR file: {0}
-msg.copyError=Error while copying the key and the certificate files
-msg.selectOneSource=Enter a name of the certificate file or enter the certificate as text
-title=Certificates
-error.validate=Cannot validate certificate: {0}
-error.show=Cannot show certificate {0}. Execution failed
-error.keep=Cannot copy the certificate
-error.temp=Cannot create temporary certificate path
-error.delete.cert=Error during certificate deletion
-error.https.server.status.code=Http Server on {0} returned error: {1}
-error.https.server=Cannot initiate connection to {0}.\n{1}
-error.delete.default.ca=Cannot delete default CA file: {0}
-error.rehash=Cannot rehash certificate
-error.regenstore=Error regenerating KeyStores/TrustStore
-error.script.exit.code=Script executed with exit code: {0}
-error.valid=Unable to validate certificate
+msg.generateSuccess=Generieren des CSR erfolgreich beendet
+msg.readError=Lesen der Datei {0} nicht m\u00F6glich
+msg.writeError=Schreiben der Datei {0} nicht m\u00F6glich
+msg.scriptGenError=Fehler beim Generieren der CSR Datei: {0}
+msg.copyError=Fehler beim Kopieren des Schl\u00FCssels und der Zertifikats Dateien
+msg.selectOneSource=Geben Sie einen Namen der Zertifikat Datei ein oder geben Sie das Zertifikat als Text ein
+title=Zertifikate
+error.validate=Kann das Zertifikat {0} nicht validieren
+error.show=Das Zertifikat {0} kann nicht angezeigt werden. Ausf\u00FChrung fehlgeschlagen
+error.keep=Es ist nicht m\u00F6glich das Zertifikat zu kopieren
+error.temp=Es ist nicht m\u00F6glich einen tempor\u00E4ren Pfad für das Zertifikat zu erzeugen
+error.delete.cert=Fehler während dem L\u00F6schen des Zertifikates
+error.https.server.status.code=Http Server auf {0} gibt folgenden Fehler zur\u00FCck: {1}
+error.https.server=Konnte keine Verbindung aufbauen zu {0}.\n{1}
+error.delete.default.ca=Es ist nicht m\u00F6glich die Standart CA Datei {0} zu l\u00F6schen
+error.rehash=Es ist nicht m\u00F6glich das Zertifikat wiederaufzubereiten
+error.regenstore=Fehler beim neu generieren des KeyStores/TrustStore
+error.script.exit.code=Script ausgef\u00FChrt mit End Code: {0}
+error.valid=Es ist nicht m\u00F6glich die Zertifikate zu validieren.
