--- a/sipxpbx/WEB-INF/admin/MonitoringTargetsConfigurationPanel.properties
+++ b/sipxpbx/WEB-INF/admin/MonitoringTargetsConfigurationPanel.properties
@@ -1,4 +1,4 @@
-title=Targets to Monitor
-targets.help=<p>Select one or more system parameters that will be monitored. A monitored parameter \
-  is measured every 5 minutes. The resulting graphs are displayed on the Statistics page.</p>
-link.statisticsPage=Statistics
+title=Ziele, die beobachtet werden sollen
+targets.help=<p>W\u00E4hlen Sie einen oder mehrere Systemparameter aus, die beobachtet werden sollen. Ein beobachteter Parameter \
+  wird alle 5 Minuten gemessen. Der daraus resultierende Graph wird auf der Statistik Seite angezeigt.</p>
+link.statisticsPage=Statistiken
