--- a/sipxpbx/WEB-INF/admin/ShowCertificate.properties
+++ b/sipxpbx/WEB-INF/admin/ShowCertificate.properties
@@ -1,2 +1,2 @@
-hideDescription=Hide Description
-showDescription=Show Description
+hideDescription=Verberge Beschreibung
+showDescription=Zeige Beschreibung
