--- a/sipxpbx/WEB-INF/admin/TimeSettingsPage.properties
+++ b/sipxpbx/WEB-INF/admin/TimeSettingsPage.properties
@@ -1,7 +1,7 @@
-button.apply=Apply
-title=System Date and Time
-label.timeSettingType=Time Setting Type
-tab.timeAndDate=Settings
-tab.timeZone=Time Zone
-tab.unmanaged=Unmanaged Service
+button.apply=\u00FCbernehme
+title=System Datum und Zeit
+label.timeSettingType=Zeit Einstellungs Typ
+tab.timeAndDate=Einstellungen
+tab.timeZone=Zeitzone
+tab.unmanaged=Nicht betreuter Service
 
