--- a/sipxpbx/WEB-INF/admin/TlsPeers.properties
+++ b/sipxpbx/WEB-INF/admin/TlsPeers.properties
@@ -1,10 +1,10 @@
 title=TLS Peers
-add=Add TLS Peer
-label.ca=Certificate Authorities
+add=F\u00FCge TLS Peer hinzu
+label.ca=Zertifikat Anbieter
 name=TLS Peer Name
-confirm.delete=Are you sure you want to delete the selected TLS Peer(s)?
-quick.help=To allow calls from an authenticated peer to use resources that require permissions, \
-	add the domain as a Trusted Peer \
-	and configure the permissions for it. \
-	The peer must use TLS to communicate to this system, \
-	and the Certificate Authority used to sign certificates must be installed on both systems.
+confirm.delete=Sind Sie sicher, dass Sie den(die) ausgew\u00E4hlten Peer(s) l\u00F6schen wollen?
+quick.help=Um Anrufe eines authentifizierten Peer, welcher Ressourcen benutzt die eine Berechtigung ben\u00F6tigen, zu erlauben \
+	f\u00FCgen Sie die Domain als vertrauensw\u00FCrdigen Peer hinzu \
+	und stellen Sie die Berechtigungen daf\u00FCr ein. \
+	Der Peer muss TLS benutzen um mit dem System zu kommunizieren, \
+	und der Zertifikats Anieter, welcher benutzt wurde um das Zertifikat zu zertifizieren, muss auf beiden Systemen installiert sein.
