--- a/sipxpbx/WEB-INF/backup/BackupForm.properties
+++ b/sipxpbx/WEB-INF/backup/BackupForm.properties
@@ -1,39 +1,39 @@
-backupNow=Backup Now
-backupPlan.label=Backup type
-backupPlan.description=Parameters below apply to the selected backup type. Each type can have independent automatic backup schedule.
-backupPlan.type.local=Local
+backupNow=F\u00FChre Backup jetzt aus
+backupPlan.label=Backup Typ
+backupPlan.description=Die untenstehenden Parameter sind für den ausgew\u00E4hlten Backup Typ g\u00FCltig. Jeder Typ kann unabh\u00E4ngige automatische Backup Pl\u00E4ne haben.
+backupPlan.type.local=Lokal
 backupPlan.type.ftp=FTP
-description=To backup the system select the desired backup options and press the <em>Backup Now</em> button. \
-	You can perform a partial backup by leaving some options unselected.<br/> Backup files will be available \
-	for download once the backup is completed.<br/>\
-    Additionally the configuration part of the backup can be sent by email. \
-    Voicemail store is not attached, as it usually exceeds the email size limit.
-message.backupCompleted=Backup completed successfully. You can download archived data by clicking on the links below.
-helpText=Click on each link to download the files.<br/>Backup files should be stored on media or a machine other than this server.
+description=Um das System zu sichern, w\u00E4hlen Sie den gew\u00FCnschten Backup Typ au und dr\u00FCcken Sie den Button <em>F\u00FChre Backup jetzt aus</em>. \
+	Sie k\u00F6nnen ein Teilbackup ausf\u00FChren, indem Sie einige Optionen nicht ausw\u00E4hlen.<br/> Die Backup Dateien sind f\u00FCr den Download \
+	verf\u00FCgbar, sobald das Backup ausgef\u00FChrt worden ist.<br/>\
+    Noch dazu kann der Konfigurationsteil des Backups per E-Mail verschickt werden. \
+    Voicemails werden nicht angeh\u00E4ngt, da diese normalerweise die maximale Mailgr\u00F6ße \u00FCberschreiten.
+message.backupCompleted=Backup erfolgreich ausgef\u00FChrt. Sie k\u00F6nnen die archivierten Daten herunterladen, indem Sie den Link unten klicken.
+helpText=Klicken Sie auf jeden Link um die Dateien herunterzuladen.<br/>Backup Dateien sollten auf einem Medium oder einem anderen Server als diesem gespeichert werden.
 
-msg.schedule=Local backups are stored in <em>/var/sipxdata/backup</em> in a subdirectory whose name corresponds to the date and \
-	time the backup was made. \
-	When using local backup NFS or a similar mechanism should be used to store full backups \
-    on a different machine.
+msg.schedule=Lokale Backups werden in dem Ordner <em>/var/sipxdata/backup</em> in einem Unterordner, der nach dem Datum \
+	und der Zeit benannt ist, gespeichert. \
+	Falls Sie lokale Backups benutzen, sollte NFS oder ein \u00E4hnlicher Mechanismus benutzt werden \
+    um ganze Backups auf einem anderen Server zu speichern.
 	
-label.lastBackup=Last Backup
+label.lastBackup=Letztes Backup
 
-label.emailAddress=Email address
-description.emailAddress=Used for sending the configuration backup file (no voicemail). Leave empty to disable e-mail notification.
+label.emailAddress=E-Mail Adresse
+description.emailAddress=Wird benutzt um die Konfigurations Backupdateien zu senden (Keine Voicemails). Lassen Sie das Feld leer um E-Mail Benachrichtigungen zu deativieren.
 
-label.limitCount=Number of backups to keep
-description.limitCount=After the limit is reached, the oldest backup will be deleted as each new backup is performed.
+label.limitCount=Anzahl der Backups die behalten werden sollen
+description.limitCount=Nachdem das Limit erreicht ist, wird bei jedem Erstellen eines neuen Backups das \u00E4lteste gel\u00F6scht.
 
-label.files=Files
-label.schedule=Schedule
+label.files=Dateien
+label.schedule=Zeitplan
 
-label.timeOfDay=Time of day
+label.timeOfDay=Zeit des Tages
 
-message.backupFailed=Backup operation failed.
-message.emptySelection=Select at least one item to backup.
-select.unlimited=Unlimited
-message.refusedConnection=FTP server refused the connection
-message.userPass=FTP user ID or password is incorrect
-message.notConnect=Could not connect to the FTP server
-message.ftpServerError=Unknown Internal Error returned by the FTP server
-message.success=Changes applied successfully.
+message.backupFailed=Backup fehlgeschlagen.
+message.emptySelection=Wählen Sie mindestens ein Obekt aus, das gesichert werden soll.
+select.unlimited=Unlimitiert
+message.refusedConnection=Der FTP Server hat die Verbindung zur\u00FCckgewiesen
+message.userPass=FTP Benutzer oder Passwort ist falsch
+message.notConnect=Verbindung zum FTP Server nicht m\u00F6glich
+message.ftpServerError=Ein unbekannter interner Fehler wurde vom FTP Server gemeldet
+message.success=\u00E4nderungen erfolgreich angewendet.
