--- a/sipxpbx/WEB-INF/backup/BackupForm.properties
+++ b/sipxpbx/WEB-INF/backup/BackupForm.properties
@@ -30,7 +30,7 @@ label.schedule=Zeitplan
 label.timeOfDay=Zeit des Tages
 
 message.backupFailed=Backup fehlgeschlagen.
-message.emptySelection=Wählen Sie mindestens ein Obekt aus, das gesichert werden soll.
+message.emptySelection=W\u00E4hlen Sie mindestens ein Obekt aus, das gesichert werden soll.
 select.unlimited=Unlimitiert
 message.refusedConnection=Der FTP Server hat die Verbindung zur\u00FCckgewiesen
 message.userPass=FTP Benutzer oder Passwort ist falsch
