--- a/sipxpbx/WEB-INF/backup/BackupTable.properties
+++ b/sipxpbx/WEB-INF/backup/BackupTable.properties
@@ -1,4 +1,4 @@
-message.noBackups=There are no backup files saved in the backup folder.
-archive.command.failed=Archive command {0} failed. Exit code: {1}
-error.running.archive.command=Error running archive command {0}
-timed.out.archive.command=Timed out running archive command {0}
+message.noBackups=Es sind keine Backup Dateien gespeichert im Backup Ordner.
+archive.command.failed=Archivierungsbefehl {0} fehlgeschlagen. Exit Code: {1}
+error.running.archive.command=Fehler beim ausfü\u00FChren des Befehls {0}
+timed.out.archive.command=Timeout bei Befehl {0}
