--- a/sipxpbx/WEB-INF/backup/RestoreFinalize.properties
+++ b/sipxpbx/WEB-INF/backup/RestoreFinalize.properties
@@ -1,5 +1,5 @@
-button.restore=Restore
-confirm.restore=Are you sure you want to restore the selected backup(s)?
-restore.success=Restore successful
-error.passwordsRequired=If you enabled Decode PINs option both Reset Voicemail \
-	PINs and Reset passwords values are required.
+button.restore=Wiederherstellen
+confirm.restore=Sind Sie sicher, dass Sie das(die) ausgew\u00E4hlten Backup(s) wiederherstellen wollen?
+restore.success=Wiederherstellen erfolgreich
+error.passwordsRequired=Falls Sie die Dekodiere PINs Option aktiviert haben werden sowohl die Reset Voicemail \
+	PINs und die Reset Passw\u00F6rter Werte ben\u00F6tigt.
