--- a/sipxpbx/WEB-INF/backup/RestoreForm.properties
+++ b/sipxpbx/WEB-INF/backup/RestoreForm.properties
@@ -1,18 +1,17 @@
 label.backups=Backups
-button.restore=Restore
-message.invalidSelection=Please select one Voicemail backup and/or one Configuration and/or one CDR and/or one Device Config backup.
-message.noScriptFound=Restore script not found.
-message.noFileToRestore=Please choose a file to restore.
-message.wrongConfigurationFileToRestore=Configuration archive seems invalid (it's either corrupt or incomplete, or it may be a voicemail archive).
-message.wrongVoicemailFileToRestore=Voicemail archive seems invalid (it looks like a configuration archive)
-message.wrongVersion=Incompatible backup files are attempted to be restored.
-restore.quick.help=To restore the system configuration, \
-    select the desired backup you want \
-    restored and press the <strong>Restore</strong> button. \
-    You can \
-    select either a configuration backup, \
-    a voicemail backup or both.<br/> <br/> \
-    <strong>ATTENTION!</strong> After Restore is pressed, \
-    the config server will be restarted, so \
-    the UI will be down for a couple \
-    of minutes.
+button.restore=Wiederherstellen
+message.invalidSelection=Bitte w\u00E4hlen Sie ein Voicemail Backup und/oder eine Konfiguration und/oder eine CDR und/oder ein Ger\u00E4tekonfigurations Backup.
+message.noScriptFound=Script für das Wiederherstellen nicht gefunden.
+message.noFileToRestore=Bitte w\u00E4hlen Sie eine Datei zum Wiederherstellen aus.
+message.wrongConfigurationFileToRestore=Konfigurationsarchiv scheint inkorrekt zu sein (es ist entweder defekt, oder nicht komplettm oder es ist ein Voicemail Archiv).
+message.wrongVoicemailFileToRestore=Voicemail Archiv scheint nicht korrekt zu sein (es sieht wie ein Konfigurationsarchiv aus)
+message.wrongVersion=Es wird versucht Inkompatible Backup Dateien wiederherzustellen.
+restore.quick.help=Um die Systemkonfiguration wiederherzustellen, \
+    w\u00E4hlen Sie das gew\u00FCnschte Backup aus \
+    und dr\u00FCcken Sie den <strong>Wiederherstellen</strong> Button. \
+    Sie k\u00F6nnen \
+    entweder ein Konfigurations Backup ausw\u00E4hlen, \
+    oder ein Voicemail Backup, oder beides.<br/> <br/> \
+    <strong>ACHTUNG!</strong> Nachdem Wiederherstellen gedr\u00FCckt worden ist, \
+    wird der Konfigurationsserver neustarten, also \
+    wird das User Interface für einige Minuten down sein.
