--- a/sipxpbx/WEB-INF/backup/RestorePage.properties
+++ b/sipxpbx/WEB-INF/backup/RestorePage.properties
@@ -1,48 +1,47 @@
-title=Restore from Backup
-tab.restore=Backup folder
-tab.upload=Backup file upload
-tab.log=Restore log
-tab.restoreLocal=Restore
-tab.restoreFtp=Restore from FTP
+title=Wiederherstellen von Backup
+tab.restore=Backup Ordner
+tab.upload=Backup Datei Upload
+tab.log=Wiederherstellungslog
+tab.restoreLocal=Wiederherstellen
+tab.restoreFtp=Wiederherstellen von Backup
 
-backupPlan.type.local=Local
+backupPlan.type.local=Lokal
 backupPlan.type.ftp=FTP
-backupPlan.label=Backup type
-backupPlan.description=Parameters below apply to the selected backup type.
-restore.quick.help=To restore the system configuration, \
-	select the desired backup you want \
-	restored and press the <strong>Restore</strong> button. \
-	You can \
-	select either a configuration backup, \
-	a voicemail backup or both.<br/> <br/> \
-	Device configuration backup has entries \
-	in DB for each device file. Please make sure \
-	you select Configuration together with Device Configuration.<br/> <br/> \
-	<strong>ATTENTION!</strong> After Restore is pressed, \
-	the config server will be restarted, so \
-	the UI will be down for a couple \
-	of minutes.
+backupPlan.label=Backup Typ
+backupPlan.description=Untestehende Parameter werden für das ausgew\u00E4hlte Backup angewandt.
+restore.quick.help=Um die Systemkonfiguration wiederherzustellen, \
+	w\u00E4hlen Sie das gew\u00FCnschte Backup aus \
+	und dr\u00FCcken Sie den <strong>Wiederherstellen</strong> Button. \
+	Sie k\u00F6nnen \
+	entweder ein Konfigurations Backup ausw\u00E4hlen, \
+	oder ein Voicemail Backup, oder beides.<br/> <br/> \
+	Ger\u00E4te Konfigurations Backup hat Eintr\u00E4ge \
+	in der der DB für jede einzelne Ger\u00E4tedatei. Bitte vergewissern Sie sich \
+	dass Sie die Konfiguration zusammen mit der Ger\u00E4te Konfiguration ausw\u00E4hlen.<br/> <br/> \
+	<strong>ACHTUNG!</strong> Nachdem Wiederherstellen gedr\u00FCckt worden ist, \
+	wird der Konfigurationsserver neustarten, also \
+	wird das User Interface f\u00FCr einige Minuten down sein.
 
-backup.CONFIGURATION=Configuration
+backup.CONFIGURATION=Konfiguration
 backup.VOICEMAIL=Voicemail
 backup.CDR=Cdr
-backup.DEVICE_CONFIG=Device Configuration 
-message.failed.uploadConfiguration=Failed to upload Configuration.
-message.failed.uploadVoicemail=Failed to upload Voicemail.
-message.wrongFileToRestore=Please choose a valid file to restore (tar.gz archive).
-log.read.ex=Restore log file cannot be read.
-log.found.ex=Restore log file is not found.
-log.quick.help=Review the log available for the last <strong>Restore</strong> operation performed.
-configurationPage=Configuration
-ftp.configuration=To configure FTP server credentials please click the <strong>Configuration</strong> link. \
-<br> If you want to select backups from the configured FTP server please check the <em>FTP</em> checkbox.
+backup.DEVICE_CONFIG=Ger\u00E4te Konfiguration
+message.failed.uploadConfiguration=Uploaden der Konfiguration fehlgeschlagen.
+message.failed.uploadVoicemail=Hochladen der Voicemail fehlgeschlagen.
+message.wrongFileToRestore=Bitte w\u00E4hlen Sie eine g\u00FCltige Datei zum Wiederherstellen aus (tar.gz Archive).
+log.read.ex=Wiederherstellungs Log Datei kann nicht gelesen werden.
+log.found.ex=Wiederherstellungs Log Datei kann nicht gefunden werden.
+log.quick.help=Betrachten Sie die Log Datei f\u00FCr den letzten ausgef\u00FChrten <strong>Wiederherstellungsvorgang</strong>.
+configurationPage=Konfiguration
+ftp.configuration=Um FTP Login Informationen einzugeben, klicken Sie bitte den <strong>Konfiguration</strong> link. \
+<br> Wenn Sie Backups von dem konfigurierten FTP Server ausw\u00E4hlen wollen aktivieren Sie bitte die <em>FTP</em> Option.
 ftp.label=FTP
 
-message.refusedConnection=FTP server refused the connection
-message.userPass=FTP user ID or password is incorrect
-message.notConnect=Could not connect to the FTP server
-message.ftpServerError=Unknown Internal Error returned by the FTP server
-message.remoteRestore.started=IVR service is restarting. Navigate to server page and monitor services restart.
-message.cdr.started=CDR service is restarting. Navigate to server page and monitor services restart.
-message.cdr.ivr.started=IVR and CDR services are restarting. Navigate to server page and monitor services restart.
-message.deviceconfig.restored=Device config files are succesfully restored
+message.refusedConnection=Der FTP Server hat die Verbindung zur\u00FCckgewiesen
+message.userPass=FTP Benutzer oder Passwort ist falsch
+message.notConnect=Verbindung zum FTP Server nicht m\u00F6glich
+message.ftpServerError=Ein unbekannter interner Fehler wurde vom FTP Server gemeldet
+message.remoteRestore.started=IVR Service wird neu gestartet. Gehen Sie auf die Server Seite und beobachten Sie den Service Neustart.
+message.cdr.started=CDR Service wird neu gestartet. Gehen Sie auf die Server Seite und beobachten Sie den Service Neustart.
+message.cdr.ivr.started=IVR und CDR Services werden neu gestartet. Gehen Sie auf die Server Seite und beobachten Sie die Services Neustarts.
+message.deviceconfig.restored=Ger\u00E4te Konfigurations Dateien wurden erfolgreich wiederhergestellt
