--- a/sipxpbx/WEB-INF/backup/RestoreUpload.properties
+++ b/sipxpbx/WEB-INF/backup/RestoreUpload.properties
@@ -1,13 +1,13 @@
-upload.quick.help=To restore the system configuration, \
-	upload the desired backup you want \
-	restored and press the <strong>Restore</strong> button. \
-	You can \
-	upload either a configuration backup, \
-	a voicemail backup or both.<br/> <br/> \
-	Device Configuration backup has entries in DB for each device file. \
-	Please make sure you upload Configuration together with Device Configuration.<br/> <br/> \
-	<strong>ATTENTION!</strong> After Restore is pressed, \
-	the config server will be restarted, so \
-	the UI will be down for a couple \
-	of minutes.
-button.restore=Restore
+upload.quick.help=Um die Systemkonfiguration wiederherzustellen, \
+	laden Sie das gew\u00FCnschte Backup hoch \
+	und dr\u00FCcken Sie den <strong>Wiederherstellen</strong> Button. \
+	Sie k\u00F6nnen \
+	laden Sie entweder ein Konfigurations Backup hoch, \
+	ein Voicemail Backup oder beides.<br/> <br/> \
+	Ger\u00E4te Konfigurations Backup hat Eintr\u00E4ge \
+	in der der DB für jede einzelne Ger\u00E4tedatei. Bitte vergewissern Sie sich \
+	dass Sie die Konfiguration zusammen mit der Ger\u00E4te Konfiguration hochladen.<br/> <br/> \
+	<strong>ACHTUNG!</strong> Nachdem Wiederherstellen gedr\u00FCckt worden ist, \
+	wird der Konfigurationsserver neustarten, also \
+	wird das User Interface f\u00FCr einige Minuten down sein.
+button.restore=Wiederherstellen
