--- a/sipxpbx/WEB-INF/branch/BranchAddressPanel.properties
+++ b/sipxpbx/WEB-INF/branch/BranchAddressPanel.properties
@@ -1,6 +1,6 @@
-label.street=Street
-label.zip=Zip/Postal Code
-label.city=City
-label.state=State/Province
-label.country=Country
+label.street=Straße
+label.zip=Postleitzahl
+label.city=Stadt
+label.state=Staat
+label.country=Land
 label.designation=Mail stop
