--- a/sipxpbx/WEB-INF/bridge/ListBridgeSbcs.properties
+++ b/sipxpbx/WEB-INF/bridge/ListBridgeSbcs.properties
@@ -1,7 +1,7 @@
 title=SIP Trunk SBCs
-address=IP Address
-status=Registration Status
-callCount=Active Calls
-label.statistics=SIP Trunk SBC Statistics
-quick.help=The internal SBC is auto-configured while external SBCs are manually configured. \
-Once an SBC has been created, configure a SIP Trunk in the Gateway menu that uses this SBC.
+address=IP Adresse
+status=Registrations Status
+callCount=Aktive Anrufe
+label.statistics=SIP Trunk SBC Statistiken
+quick.help=Der interne SBC ist automatisch konfiguriert w\u00E4hrend externe SBCs manuell konfiguriert werden. \
+Sobald ein SBC erstellt wurde, konfigurieren Sie einen SIP Trunk in dem Menü des Gateways welcher diesen SBC nutzt.
