--- a/sipxpbx/WEB-INF/cdr/EditCdr.properties
+++ b/sipxpbx/WEB-INF/cdr/EditCdr.properties
@@ -1,1 +1,1 @@
-quick.help=Call Detail Recording service. This service gathers details about calls and stores them. It is recommended to run this service on each server that also runs the SIP Proxy service. This service requires the SIP Proxy service to be enabled.
+quick.help=Rufen Sie den Detail Aufzeichnungs Service an. Dieser Service sammelt Details \u00FCber Anrufe und speichert diese. Es wird empfohlen diesen Service auf jedem Server auszuf\u00FChren, welcher den SIP Proxy nutzt. Dieser Service ben\u00F6tigt den aktivierten SIP Proxy Service.
