--- a/sipxpbx/WEB-INF/dhcp/EditDhcpd.properties
+++ b/sipxpbx/WEB-INF/dhcp/EditDhcpd.properties
@@ -1,3 +1,3 @@
-tab.dhcp=Settings
-tab.unmanaged=Unmanaged Service
-quick.help=DHCP Service to supply devices with IP addresses and other critical network settings. Only one DHCP service is allowed per cluster and is an optional service.
+tab.dhcp=Einstellungen
+tab.unmanaged=Nicht betreuter Service
+quick.help=DHCP Service um Ger\u00E4te mit IP Adressen und anderen kritischen Netzwerk Einstellungen zu versorgen. Es ist nur ein DHCP Service pro Cluster erlaubt und es ist ein optionaler Service.
