--- a/sipxpbx/WEB-INF/dialplan/sbc/NatTraversalPanel.properties
+++ b/sipxpbx/WEB-INF/dialplan/sbc/NatTraversalPanel.properties
@@ -1,6 +1,6 @@
 title=NAT Traversal
 label.enableNatTraversal=Enable NAT Traversal
-label.behindnat=Server behind NAT
-description.enableNatTraversal=Enables NAT traversal capabilities in support of remote workers and remote servers behind NAT
-description.behindnat=Needs to be checked when the server is deployed behind a NAT/Firewall.
-button.activate=Apply
+label.behindnat=Server hinter NAT
+description.enableNatTraversal=Aktivieren Sie NAT traversal Funktionen um remote Arbeiter und remote Servers hinter NAT zu unterst\u00FCtzen.
+description.behindnat=Muss aktiviert werden, wenn der Server hinter einer NAT/Firewall steht.
+button.activate=\u00FCbernehmen
