--- a/sipxpbx/WEB-INF/dialplan/EditSiteToSiteDialRule.properties
+++ b/sipxpbx/WEB-INF/dialplan/EditSiteToSiteDialRule.properties
@@ -1,5 +1,5 @@
-quick.help=<b>Prefixes</b><br/>Prefixes can be integers (e.g. 2), ranges (e.g. 1-5),\
-or lists (e.g. 2,3,4)
-title=Site to Site Dial Rule
-label.dialedNumber=Dialed Number
-label.resultingCall=Resulting Call
+quick.help=<b>Präfixe</b><br/>Pr\u00E4fixe k\u00F6nnen Zahle (z.B. 2), Bereiche (z.B. 1-5),\
+oder Listen (z.B. 2,3,4) sein
+title=Site to Site Wahl Regel
+label.dialedNumber=Gew\u00E4hlte Nummer
+label.resultingCall=Resultierender Anruf
