--- a/sipxpbx/WEB-INF/dns/EditDns.properties
+++ b/sipxpbx/WEB-INF/dns/EditDns.properties
@@ -1,3 +1,3 @@
-tab.settings=Settings
+tab.settings=Einstellungen
 tab.test=DNS Advisor
-quick.help=A Domain Name Server resolves server names to IP addresses within the system. Highly recommend you install this service on evry server. Be sure to configure "DNS Forwarders" otherwise your server will not be able to resolve any server name outside the cluster.
+quick.help=Ein DNS Name Server l\u00F6st Server Namen in IP Adressen auf im System. Es wird w\u00E4rmstens empfohlen dass Sie diesen Service auf jedem Server installieren. Vergewissern Sie sich dass "DNS Weiterleitung" konfiguriert ist, sonst ist Ihr Server nicht in der Lage andere Server Namen außerhalb des Clusters zu finden.
