--- a/sipxpbx/WEB-INF/firewall/EditFirewallServerGroup.properties
+++ b/sipxpbx/WEB-INF/firewall/EditFirewallServerGroup.properties
@@ -1,5 +1,5 @@
 label.name = Name
 label.servers = Servers
-page.title = Server Group
-quick.help=<em>Servers</em> - empty space delimited list of source IP addresses (values can be specified in four ways, \
-e.g. localhost, 127.0.0.1, 199.95.207.0/24, 199.95.207.0/255.255.255.0)
+page.title = Server Gruppe
+quick.help=<em>Servers</em> - Mit Leerzeichen getrennte Liste der IP Adressen (Werte k\u00F6nnen auf 4 verschiedenen Wegen spezifiziert werden, \
+z.B. localhost, 127.0.0.1, 199.95.207.0/24, 199.95.207.0/255.255.255.0)
